CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(c11-demo)

MESSAGE(STATUS "This is the binary dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is the source dir:" ${PROJECT_SOURCE_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")

ADD_SUBDIRECTORY(addlib/lib.a)
ADD_SUBDIRECTORY(addlib/lib.so)
ADD_SUBDIRECTORY(addlib)
ADD_SUBDIRECTORY(move)
ADD_SUBDIRECTORY(function)