CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(c11-demo)

MESSAGE(STATUS "This is the binary dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is the source dir:" ${PROJECT_SOURCE_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y")

ADD_SUBDIRECTORY(addlib/lib.a)
ADD_SUBDIRECTORY(addlib/lib.so)
ADD_SUBDIRECTORY(addlib)
ADD_SUBDIRECTORY(move)
ADD_SUBDIRECTORY(function)
ADD_SUBDIRECTORY(template)
ADD_SUBDIRECTORY(memory)
ADD_SUBDIRECTORY(serialize)
ADD_SUBDIRECTORY(algorithm)
ADD_SUBDIRECTORY(future)
#ADD_SUBDIRECTORY(cds)
#ADD_SUBDIRECTORY(seastar)
ADD_SUBDIRECTORY(macros)
ADD_SUBDIRECTORY(thread)