CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SRC_LIST main.cpp)
SET(TARGET_BIN AddlibDemo)

#一定要在ADD_EXECUTABLE前面
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/addlib/lib.a)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/addlib/lib.so)

ADD_EXECUTABLE(${TARGET_BIN} ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(lib.a)
INCLUDE_DIRECTORIES(lib.so)

TARGET_LINK_LIBRARIES(${TARGET_BIN} sub) #链接动态库
TARGET_LINK_LIBRARIES(${TARGET_BIN} libadd.a) #链接静态库

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${TARGET_BIN} ${CMAKE_THREAD_LIBS_INIT})