CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
SET(TARGET_BIN FutureDemo)

ADD_DEFINITIONS(-DBOOST_THREAD_PROVIDES_FUTURE)
ADD_DEFINITIONS(-DBOOST_THREAD_PROVIDES_FUTURE_CONTINUATION)
ADD_DEFINITIONS(-DBOOST_THREAD_PROVIDES_FUTURE_WHEN_ALL_WHEN_ANY)
ADD_DEFINITIONS(-DBOOST_THREAD_PROVIDES_EXECUTORS)

INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(/usr/include/)

LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(/usr/lib)

ADD_EXECUTABLE(${TARGET_BIN} ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${TARGET_BIN} ${CMAKE_THREAD_LIBS_INIT})

TARGET_LINK_LIBRARIES(${TARGET_BIN} libboost_system.a libboost_filesystem.a libboost_thread.a libboost_chrono.a)
