SET(SRC_LIST main.cpp)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib) #一定要在ADD_EXECUTABLE前面
ADD_EXECUTABLE(Test ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib.a)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib.so)
TARGET_LINK_LIBRARIES(Test sub) #链接动态库
TARGET_LINK_LIBRARIES(Test libadd.a) #链接静态库