SET(SRC_LIST main.cpp)
SET(TARGET_BIN Test)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib) #一定要在ADD_EXECUTABLE前面
ADD_EXECUTABLE(${TARGET_BIN} ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

FIND_PACKAGE(GFLAGS REQUIRED)
IF (GFLAGS_FOUND)
    INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${TARGET_BIN} ${GFLAGS_LIBRARY})
ENDIF (GFLAGS_FOUND)

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${TARGET_BIN} ${CMAKE_THREAD_LIBS_INIT})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib.a)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib.so)
TARGET_LINK_LIBRARIES(${TARGET_BIN} sub) #链接动态库
TARGET_LINK_LIBRARIES(${TARGET_BIN} libadd.a) #链接静态库